# hyprmark

./: .gitignore  CMakeLists.txt  LICENSE  README.md  THIRD_PARTY_LICENSES  flake.nix
.github/workflows/: ci.yml  release.yml
assets/: example.conf  highlight-theme.css  hyprmark.css  hyprmark.desktop  hyprmark.js  template.html
assets/themes/: catppuccin-latte.css  catppuccin-mocha.css  github-dark.css  github-light.css  hypr-dark.css  hypr-light.css  nord.css
nix/: default.nix  overlays.nix
packaging/aur/: PKGBUILD  README.md
scripts/: update-vendor.sh
src/: defines.hpp  main.cpp
src/config/: ConfigManager.cpp  ConfigManager.hpp
src/core/: IpcClient.cpp  IpcClient.hpp  IpcProtocol.cpp  IpcProtocol.hpp  IpcServer.cpp  IpcServer.hpp  hyprmark.cpp  hyprmark.hpp
src/helpers/: Log.hpp
src/render/: FileWatcher.cpp  FileWatcher.hpp  MarkdownRenderer.cpp  MarkdownRenderer.hpp  ThemeManager.cpp  ThemeManager.hpp
src/ui/: Bridge.cpp  Bridge.hpp  EmptyState.cpp  EmptyState.hpp  FindBar.cpp  FindBar.hpp  HamburgerMenu.cpp  HamburgerMenu.hpp  MainWindow.cpp  MainWindow.hpp  RenderView.cpp  RenderView.hpp  TitleBar.cpp  TitleBar.hpp  TocPanel.cpp  TocPanel.hpp  UrlInterceptor.cpp  UrlInterceptor.hpp
tests/: CMakeLists.txt
tests/fixtures/: basic.md  code.md  gfm.md  headings.md  images.md  math.md  reload_after.md  reload_before.md
tests/fixtures/configs/: empty.conf  keybinds.conf  minimal.conf
tests/gui/: test_empty_state.cpp  test_find_bar.cpp  test_hamburger_menu.cpp  test_title_bar.cpp
tests/unit/: test_config.cpp  test_config_writer.cpp  test_file_watcher.cpp  test_ipc.cpp  test_markdown.cpp  test_renderer_determinism.cpp  test_theme.cpp
